# od_test

./: MANIFEST.in  setup.cfg
gemmm/: __init__.py  od_matrix.py  tables.py
model_data/: manchester_msoas.npy
