[metadata]
name = gemmm
author = Modelling and Data Science for Emergency Preparedness, Resilience, and Response - UKHSA
version = attr: gemmm.version.__version__
description = A package for generating origin-destination matrices for UK MSOAs
long_description= file: README.md
home_page = https://github.com/jontycarruthersphe/od_test

[options]
python_requires = >=3.11
install_requires = 
  numpy>=2.0.1
  pandas>=2.2.2
  scipy>=1.14.0
  dask>=2024.8.0
  pyarrow>=17.0.0
  pooch>=1.8.2
  setuptools

  
packages = find:
include_package_data = true

[options.packages.find]
exclude =
    docs*
    tests*
    model_data*
    .git,
    .github,
    __pycache__,
    dist,
    build